fix cover image issue on firefox

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -2,7 +2,7 @@
   .coverImage
     height: 500px
     width: 100%
-    margin-top: -60px
+    margin-top: -61px
     overflow: hidden
     position: relative
     z-index: 1
